--- a/_posts/2020-3-9-Java并发编程（三）.md
+++ b/_posts/2020-3-9-Java并发编程（三）.md
@@ -196,3 +196,132 @@ static final class FairSync extends Sync{
 ```
 
 两者相比，就是公平lock()多了一个if(!hasQueuedPredecessors())。意思就是当c == 0，(没有线程持有锁)，并且排队到队列的第一个时，才去抢锁，否则继续排队，这才叫“公平”。
+下面开始介绍阻塞队列与唤醒部分。先说addWaiter()函数，就是为当前线程生成一个Node，然后尾插法把这个Node放到双向链表的尾端，注意到这只是把Thread对象放到一个队列中，线程本身并没有发生功能阻塞。
+
+```java
+
+private Node addWaiter(Node mode){
+    Node node = new Node(Thread.currentThread() , mode);
+    Node pred = tail;
+    if(pred != null){
+        node.prev = pred;
+        if(CompareAndSetTail(pred,node)){ //先尝试添加到队列尾部，如果不成功，则执行下面的enq(node)
+            pred.next = node;
+            return node;
+        }
+    }
+    enq(node); //enq内部会对对列进行初始化，然后不断自旋，直到成功地把该Node加入到队列尾部
+    return node;
+}
+
+```
+
+addWaiter()把Thread对象加入到阻塞队列之后的工作就要靠acquireQueued()函数完成。线程一旦进入到acquireQueued()就会被无限阻塞，即使有其它线程调用了interrupt()函数。除非有其他线程释放了锁，并且该线程拿到了锁。
+
+```java
+
+final boolean acquireQueued(final Node node, long arg) {
+    boolean interrupted = false;
+    try {
+        for (;;) {
+            final Node p = node.predecessor();
+            if (p == head && tryAcquire(arg)) {  //被唤醒，如果自己在链表头，则尝试拿锁
+                setHead(node); //哪所成功，出队列
+                p.next = null; // help GC
+                return interrupted;
+            }
+            if (shouldParkAfterFailedAcquire(p, node))
+                interrupted |= parkAndCheckInterrupt();
+        }
+    } catch (Throwable t) {
+        cancelAcquire(node);
+        if (interrupted)
+            selfInterrupt();
+        throw t;
+    }
+}
+
+```
+
+acquireQueued()函数有一个返回值，表示的意思是说阻塞时期有没有其他线程向它发送过中断信号，基于这个返回值，才有以下的代码。
+
+```java
+public final void acquire(int arg){
+    if(!tryAcquire(arg) && acquireQueued(addWaiter(Node.EXCLUSIVE) , arg))
+        selfInterrupt();
+}
+
+static void selfInterrupt() {
+    Thread.currentThread().interrupted();
+}
+
+```
+
+之所以这么做，是因为自己在阻塞期间收到其它线程的中断信号没有及时响应，要进行补偿。如此一来，如果该线程在lock代码段内部有调用sleep()之类的阻塞方法，那么就可以跑出异常，响应该中断信号。阻塞就发生在下面这个函数中：
+
+```java
+private final boolean parkAndCheckInterrupt(){
+    LockSupport.park(this);
+    return Thread.interrupted();
+}
+
+```
+
+线程调用park()函数，自己把自己阻塞起来，直到被其他线程唤醒。park()函数返回有两种情况:
+
+1. 其他线程调用了unpark(Thread t)
+
+2. 其他线程调用了t.interrupt()。需要注意的是，lock()不能响应中断，但是LockSupport.park()会响应中断。
+
+正因LockSupport.park()可能被中断唤醒，acquireQueued()函数才写了一个for死循环。唤醒之后，如果自己在队列头部，就去拿锁；如果拿不到锁，则再次阻塞自己，直到拿到锁。
+
+### unlock()实现分析
+
+unlock不区分公平还是非公平:
+
+```java
+public void unlock() {
+    sync.release(1);
+}
+
+public final boolean release(int arg){
+    if(tryRelease(arg)){
+        Node h = head;
+        if(h != null && h.waitStatus != 0)
+            unparkSuccessor(h);
+        return true;
+    }
+    return false;
+}
+
+protected final boolean tryRelease(int releases){
+    int c = getState() - releases;
+    if(Thread.currentThread() != getExclusiveOwnerThread()) //很显然，只有锁的拥有者才有资格调用unlock函数，否则直接抛出异常
+        throw new IllegalMonitorStateException();
+    boolean free = false;
+    if(c == 0){// 每调用一次tryRelease, state值减1，直到0，表示这个锁可以被成功释放。
+        free = ture;
+        setExclusiveOwnerThread(null);
+    }
+    setState(c);//关键点：没有使用CAS，而直接set。因为是排它锁，只有1个线程能够减state值
+}
+
+private void unparkSuccessor(Node node){
+    ...
+    Nodes s = node.next;
+    if(s == null || s.waitStatus > 0){
+        s = null;
+        for(Node t = tail; t != null && t != node; t = t.prev)
+            if(t.waitStatus <= 0)
+                s = t;
+    }
+    if( s!= null)
+        LockSupport.unpark(s.thread);//关键的一句
+}
+```
+
+release()里面做了两件事:tryRelease()函数释放锁;unparkSuccessor()函数唤醒队列中的后继者。
+
+### lockInterruptibly()实现分析
+
+上面的lock不能被中断，但是此处的lockInterruptibly()可以被中断，下面看两者区别。
