--- a/_posts/2020-3-13-Java并发编程（三）.md
+++ b/_posts/2020-3-13-Java并发编程（三）.md
@@ -376,7 +376,7 @@ public interface ReadWriteLock{
 }
 ```
 
-ReentrantReadWriteLock实现了该接口，使用方式并不是直接使用，而是获取其内部的读锁和写锁，再分别调用unlock()和lock()。从表面上来看，ReadLock和WriteLock是两把锁，实际上它只是同一把锁的两种视图而已。实际上，readLock和writeLock共享一个对象，和普通对象互斥锁一样，分为公平和非公平两种策略，并集成AQS。
+ReentrantReadWriteLock实现了该接口，使用方式并不是直接使用，而是获取其内部的读锁和写锁，再分别调用unlock()和lock()。从表面上来看，ReadLock和WriteLock是两把锁，实际上它只是同一把锁的两种视图而已。实际上，readLock和writeLock共享一个对象，和普通对象互斥锁一样，分为公平和非公平两种策略，并继承AQS。
 
 ```java
 public ReentrantReadWriteLock(){
@@ -389,3 +389,157 @@ public ReentrantReadWriteLock(boolean fair){
     writerLock = new WriteLock();
 }
 ```
+
+读写锁的state和互斥所完全不同，在内部类Sync中，对state变量进行了重新定义：
+
+```java
+static abstract class Sync extends AbstractQueuedSynchronizer{
+    ...
+    static final int SHARED_SHIFT = 16;
+    static final int SHARED_UNIT = (1 << SHARED_SHIFT);
+    static final int MAX_COUNT = (1 << SHARED_SHIFT) - 1;
+    static final int EXCLUSIVE_MASK = (1 << SHARED_SHIFT) - 1;
+    static int sharedCount(int c){ //持有读锁的线程可重入次数
+        return c >>> SHARED_SHIFT;
+    }
+    static int exclusiveCount(int c){ //持有写锁的可重入次数
+        return c & EXCLUSIVE_MASK;
+    }
+    ...
+}
+```
+
+也就是把state分成两部分，低16位用来记录写锁，高16位用来记录读锁。下面开始介绍在ReentrantReadWriteLock的两个内部类ReadLock和WriteLock中，是如何使用state变量的。
+
+```java
+public static class ReadLock implements Lock, java.io.Serializable{
+    ...
+    public void lock() {
+        sync.acquireShared(1);
+    }
+
+    public void unlock() {
+        sync.realeaseShared(1);
+    }
+}
+
+public static class WriteLock implements Lock, java.io.Serializable{
+    ...
+    public void lock() {
+        sync.acquire(1);
+    }
+
+    public void unlock() {
+        sync.release(1);
+    }
+}
+```
+
+对于公平，比较好理解，那就是不管读锁还是写锁，只要队列中有其他线程在排队，就不能只抢锁，要排在队列尾部。而对于非公平，读锁和写锁的实现略有差异。写线程可以抢锁，前提是state = 0，只有没有其他线程持有读锁或写锁的情况下，它才有机会去抢锁。或者 state != 0，但是持有的写线程是自己，再次重入。但对于读线程，要做到对读线程的非公平，要发现当前队列的第一个个元素是写线程的时候，要阻塞。防止写线程一直拿不到锁。
+
+### Condition
+
+Condition本身也是一个接口，代码如下：
+
+```java
+public interface Condition{
+    void await() throws InterruptedException;
+    void awaitUninterruptibly();
+    void signal();
+    void signalAll();
+    ...
+}
+```
+
+在讲多线程基础的时候，说道wait()/notify()必须搭配synchronized一起使用。类似，Condition要和Lock搭配在一起使用。因此所有的Condition都是从Lock中构造出来。
+首先，读写锁的读锁是不支持Condition的，读写锁的写锁和互斥锁都支持Condition。他们所调用的sync.newCondition最终都调用了AQS的newCondition。下面开始对await进行分析：
+
+```java
+public final void await() throws InterruptedException {
+    if (Thread.interrupted())
+        throw new InterruptedException();
+    Node node = addConditionWaiter();  //加入Condition等待队列
+    long savedState = fullyRelease(node);//阻塞在Condition之前，必须先释放锁
+    int interruptMode = 0;
+    while (!isOnSyncQueue(node)) {
+        LockSupport.park(this);
+        if ((interruptMode = checkInterruptWhileWaiting(node)) != 0)
+            break;
+    }
+    if (acquireQueued(node, savedState) && interruptMode != THROW_IE) //重新拿锁
+        interruptMode = REINTERRUPT;
+    if (node.nextWaiter != null) // clean up if cancelled
+        unlinkCancelledWaiters();
+    if (interruptMode != 0)
+        reportInterruptAfterWait(interruptMode);
+}
+```
+
+线程调用await()的时候，肯定已经先拿到了锁，所以在内部不必要进行CAS，线程天生安全:
+
+```java
+private Node addConditionWaiter() {
+    Node t = lastWaiter;
+    ...
+    Node node = new Node(Thread.currentThread(), Node.CONDITION);
+    if( t == null)
+        firstWaiter = node;
+    else
+        t.nextWaiter = node;
+    lastWaiter = node;
+    return node;
+}
+```
+
+线程从wait被唤醒后，必须重新拿锁。
+与await()不同，awaitUninterruptibly()不会响应中断，下面分析其实现和await()区别。
+
+```java
+public final void awaitUninterruptibly() {
+    Node node = addConditionWaiter();
+    long savedState = fullyRelease(node);
+    boolean interrupted = false;
+    while (!isOnSyncQueue(node)) {
+        LockSupport.park(this);
+        if (Thread.interrupted()) //从park醒来，收到中断，不退出，继续执行while循环
+            interrupted = true;
+    }
+    if (acquireQueued(node, savedState) || interrupted)
+        selfInterrupt();
+}
+```
+
+```java
+final boolean transferForSignal(Node node) {
+    if (!compareAndSetWaitStatus(node, Node.CONDITION, 0)) //只有拥有锁的线程，才有资格调用signal
+        return false;
+    Node p = enq(node);
+    int ws = p.waitStatus;
+    if (ws > 0 || !compareAndSetWaitStatus(p, ws, Node.SIGNAL))
+        LockSupport.unpark(node.thread);
+    return true;
+}
+
+private void doSignal(Node first) {
+    do {
+        if ( (firstWaiter = first.nextWaiter) == null)
+            lastWaiter = null;
+        first.nextWaiter = null;
+    } while (!transferForSignal(first) &&
+             (first = firstWaiter) != null);
+}
+
+final boolean transferForSignal(Node node) {
+    if (!compareAndSetWaitStatus(node, Node.CONDITION, 0))
+        return false;
+    Node p = enq(node); //先放入同步队列，再唤醒对应线程
+    int ws = p.waitStatus;
+    if (ws > 0 || !compareAndSetWaitStatus(p, ws, Node.SIGNAL))
+        LockSupport.unpark(node.thread);
+    return true;
+}
+```
+
+同await一样，调用notify的时候，先要拿到锁，然后从队列中取出firstWait，唤醒它。然后把这个Node放到AQS锁对应的阻塞队列中。正因如此，才有await()函数中判断是否在同步队列中，否则一直while循环。
+
+### StampedLock
