--- a/_posts/2020-3-13-Java并发编程（三）.md
+++ b/_posts/2020-3-13-Java并发编程（三）.md
@@ -543,3 +543,39 @@ final boolean transferForSignal(Node node) {
 同await一样，调用notify的时候，先要拿到锁，然后从队列中取出firstWait，唤醒它。然后把这个Node放到AQS锁对应的阻塞队列中。正因如此，才有await()函数中判断是否在同步队列中，否则一直while循环。
 
 ### StampedLock
+
+StampedLock在ReetrantReadWriteLock基础上，保证了读写不互斥。这和Mysql高并发的核心机制MVVC有异曲同工之妙，也就是一份数据多个版本。并且，由于ReentrantReadWriteLock采取的是悲观锁的机制，也就是第一个读线程拿到锁之后，第二第三个读线程还可以拿到锁导致写线程饥饿。因此StampedLock引入了乐观锁的机制。并且为了保证因重排序导致的错误，validate()加入了内存屏障。
+
+下面是state变量分析:
+
+```java
+private static final long RUNIT = 1L;
+private static final long WBIT  = 1L << LG_READERS; //第8位表示写锁
+private static final long RBITS = WBIT - 1L; //最低的7位表示读锁
+private static final long RFULL = RBITS - 1L; //读锁的数目
+private static final long ABITS = RBITS | WBIT; //读锁和写锁结合在一起
+private static final long SBITS = ~RBITS; // note overlap with ABITS
+private static final long ORIGIN = WBIT << 1; //state的初始值
+private transient volatile long state;
+```
+
+因为写锁只有一个bit位，所以是不可重入的。虽然StampedLock也实现了读锁和写锁操作，但是不基于AQS实现的，而是内部重新实现了一个阻塞队列。
+
+```java
+static final class WNode {
+    volatile WNode prev;
+    volatile WNode next;
+    volatile WNode cowait;    // list of linked readers
+    volatile Thread thread;   // non-null while possibly parked
+    volatile int status;      // 0, WAITING, or CANCELLED
+    final int mode;           // RMODE or WMODE
+    WNode(int m, WNode p) { mode = m; prev = p; }
+}
+
+/** Head of CLH queue */
+private transient volatile WNode whead;
+/** Tail (last) of CLH queue */
+private transient volatile WNode wtail;
+```
+
+这里锁的调度策略和AQS并不相同，在这个阻塞队列中拿不到锁，节点会不断自旋，自旋次数够多后，如果还拿不到锁，才会进入阻塞状态。
