--- a/_posts/2020-3-17-Java并发编程（四）.md
+++ b/_posts/2020-3-17-Java并发编程（四）.md
@@ -120,3 +120,32 @@ public class LinkedBlockingQueue<E> extends AbstractQueue<E>
 
 #### DelayQueue
 
+延迟队列，按照延迟时间大小出队的PriorityQueue。
+
+### CopyOnWrite
+
+CopyOnWrite是指在写的时候，不是直接写源数据，而是把数据拷贝一份进行修改，再通过悲观锁或者乐观锁的方式进行回写。之所以不直接修改是因为在读的时候保证无锁。
+
+#### CopyOnWriteArrayList
+
+读函数全部没有加锁，但是在写函数中保证线程安全。
+
+```java
+public boolean add(E e) {
+    final ReentrantLock lock = this.lock;
+    lock.lock();//悲观锁
+    try {
+        Object[] elements = getArray();
+        int len = elements.length;
+        //CopyOnWrite,写的时候拷贝之前一份数据
+        Object[] newElements = Arrays.copyOf(elements, len + 1);
+        newElements[len] = e;
+        setArray(newElements);
+        return true;
+    } finally {
+        lock.unlock();
+   }
+}
+```
+
+### ConCurrentLinkedQueue
